changed to using padding on the right to maintain right alignment of values but still center information better. fixed an issue with the table having 0 height when shown in landscape mode of a mobile view.

--- a/packages/augur-ui/src/modules/common/row.styles.less
+++ b/packages/augur-ui/src/modules/common/row.styles.less
@@ -61,7 +61,7 @@
 
     @media @breakpoint-mobile {
       &:nth-of-type(3) {
-        justify-content: center;
+        padding-right: @size-24;
       }
     }
   }
