--- a/packages/augur-ui/src/modules/portfolio/components/common/data-table-header.styles.less
+++ b/packages/augur-ui/src/modules/portfolio/components/common/data-table-header.styles.less
@@ -99,7 +99,7 @@
       }
 
       &:nth-of-type(3) {
-        justify-content: center;
+        padding-right: @size-24;
       }
     }
   }
